index.html: add skills and layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
+<!DOCTYPE html>
 <html>
-<body>
- <h3> Website </h3>
-</body>
+  <head>
+    <title>Himanshu Teotia</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+
+  <body>
+    <div class="header">
+      <h1>Himanshu Teotia Resume :</h1>
+      <span>
+        <p>
+          Follow me on
+          <b><a href="https://github.com/himanshuteotia">Github</a></b>
+        </p>
+      </span>
+    </div>
+
+    <div class="menu">
+      <p><b>Skills :</b></p>
+      <ul>
+        <li>Microservices Architecture</li>
+        <li>Chatbots</li>
+        <li>Javascript</li>
+        <li>Python</li>
+        <li>NodeJS</li>
+        <li>Natural Language Processing</li>
+      </ul>
+    </div>
+
+    <div class="main">
+      <h1>MicroServices Architecture</h1>
+      <p>I have exprerience to build microservces</p>
+      <p></p>
+    </div>
+  </body>
 </html>
