changed styles and responsiveness

--- a/index.html
+++ b/index.html
@@ -8,24 +8,33 @@
 
   <body>
     <div class="header">
-      <h1>Himanshu Teotia Resume :</h1>
+      <h1>Himanshu Teotia Resume:</h1>
       <span>
         <p>
-          Follow me on
-          <b><a href="https://github.com/himanshuteotia">Github</a></b>
+          Follow me on {<b
+            ><a href="https://github.com/himanshuteotia">Github</a></b
+          >,
+          <b
+            ><a href="https://www.linkedin.com/in/himanshuteotia/"
+              >LinkedIn</a
+            ></b
+          >}
         </p>
       </span>
+      <span
+        ><p>Mobile No. <b> +919911012064</b></p></span
+      >
     </div>
 
     <div class="menu">
       <p><b>Skills :</b></p>
       <ul>
         <li>Microservices Architecture</li>
+        <li>Natural Language Processing</li>
         <li>Chatbots</li>
         <li>Javascript</li>
-        <li>Python</li>
         <li>NodeJS</li>
-        <li>Natural Language Processing</li>
+        <li>Python</li>
       </ul>
     </div>
 
