index.html: update text

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       <h1>Himanshu Teotia Resume:</h1>
       <span>
         <p>
-          Follow me on {<b
-            ><a href="https://github.com/himanshuteotia">Github</a></b
+          Follow me on {
+          <b><a href="https://github.com/himanshuteotia">Github</a></b
           >,
           <b
             ><a href="https://www.linkedin.com/in/himanshuteotia/"
               >LinkedIn</a
             ></b
-          >}
+          >
+          }
         </p>
       </span>
       <span
@@ -39,9 +40,11 @@
     </div>
 
     <div class="main">
-      <h1>MicroServices Architecture</h1>
-      <p>I have exprerience to build microservces</p>
-      <p></p>
+      <div>
+        <h3>MicroServices Architecture</h3>
+        <p>I have exprerience to build microservces</p>
+        <p></p>
+      </div>
     </div>
   </body>
 </html>
