index.html: update text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="main">
       <div>
         <h3>MicroServices Architecture</h3>
-        <p>I have exprerience to build microservces</p>
+        <p>I have exprerience in building microservces</p>
         <p></p>
       </div>
     </div>
