index.html & style.css: redesign layout, enhance content, and improve responsiveness

--- a/index.html
+++ b/index.html
@@ -4,46 +4,41 @@
     <title>Himanshu Teotia</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
 
   <body>
-    <div class="header">
-      <h1>Himanshu Teotia Resume:</h1>
-      <span>
-        <p>
-          Follow me on {
-          <b><a href="https://github.com/himanshuteotia">Github</a></b
-          >,
-          <b
-            ><a href="https://www.linkedin.com/in/himanshuteotia/"
-              >LinkedIn</a
-            ></b
-          >
-          }
-        </p>
-      </span>
-      <span
-        ><p>Mobile No. <b> +919911012064</b></p></span
-      >
-    </div>
+    <div class="container">
+      <div class="hero">
+        <h1>Hi, I'm Himanshu Teotia 👋</h1>
+        <p class="tagline">A passionate Node.js developer with over 9 years of experience building scalable, high-performance systems.</p>
+      </div>
 
-    <div class="menu">
-      <p><b>Skills :</b></p>
-      <ul>
-        <li>Microservices Architecture</li>
-        <li>Natural Language Processing</li>
-        <li>Chatbots</li>
-        <li>Javascript</li>
-        <li>NodeJS</li>
-        <li>Python</li>
-      </ul>
-    </div>
+      <div class="content">
+        <div class="expertise">
+          <h2>Expertise</h2>
+          <ul>
+            <li>Extensive expertise in Natural Language Processing (NLP) and Distributed Systems</li>
+            <li>Focused on AI-driven automation and backend architecture</li>
+            <li>Currently working with one of the largest banking clients in the Middle East</li>
+            <li>Skilled in designing secure, efficient, and resilient applications</li>
+            <li>Strong experience integrating MongoDB, REST APIs, and cloud-based environments</li>
+          </ul>
+        </div>
 
-    <div class="main">
-      <div>
-        <h3>MicroServices Architecture</h3>
-        <p>I have exprerience in building microservces</p>
-        <p></p>
+        <div class="mission">
+          <h2>My Mission</h2>
+          <p>In a world where AI can now understand human intent, I'm on a mission to build systems that automate the future — securely, intelligently, and at scale.</p>
+        </div>
+
+        <div class="connect">
+          <h2>Connect with Me</h2>
+          <div class="social-links">
+            <a href="https://github.com/himanshuteotia" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/himanshuteotia/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+          </div>
+          <p class="contact">📱 +91 9911012064</p>
+        </div>
       </div>
     </div>
   </body>
