--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <div class="container">
       <div class="hero">
-        <h1>Hi, I'm Himanshu Teotia 👋</h1>
+        <h1>Hi, I'm Himanshu Teotia 👋<span class="cursor"></span></h1>
         <p class="tagline">A passionate Node.js developer with over 9 years of experience building scalable, high-performance systems.</p>
+        <p class="tagline">Welcome to my digital playground.</p>
       </div>
 
       <div class="content">
